<resources>
    <string name="app_name">Journal</string>
    <string name="title_activity_start_page">StartPage</string>
    <string name="title_activity_login_page">LoginPage</string>
    <!-- Strings used for fragments for navigation -->

    <string name="login_field_hint">Логин</string>
    <string name="password_field_hint">Пароль</string>
    <string name="log_in_button_text">Войти</string>
    <string name="remember_checkbox_text">Запомнить меня</string>

    <string name="logo_image_description">Logo</string>
    <string name="default_user_name">user_name</string>
    <string name="log_out_button_text">Выйти</string>
    <string name="journal_button_text">Дневник</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>