<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/UserNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_user_name"
        android:textColor="@color/DarkBlue"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/LogOutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/LogOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logOutButtonOnClick"
        android:text="@string/log_out_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <fragment
        android:id="@+id/JournalFragment"
        android:name="com.example.journal.JournalFragment"
        android:layout_width="match_parent"
        android:layout_height="2000px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JournalButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/JournalButton"
        android:layout_width="0dp"
        android:layout_height="220px"
        android:background="@color/journalBackground"
        android:onClick="journalButtonOnClick"
        android:text="@string/journal_button_text"
        android:textColorLink="@color/journalBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>